--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "version": "3.0.0",
   "private": true,
-  "packageManager": "pnpm@7.0.0",
+  "packageManager": "npm@latest",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
